# c-engine

./: CMakeLists.txt
game/: main.c
src/collision/: collision.c  collision.h
src/engine/: config.h  engine.c  engine.h
src/graphics/: animator.c  animator.h  sprite.c  sprite.h
src/object/: object.c  object.h
